--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,12 +1,9 @@
-<!--
-  Generated template for the CategoriasPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>categorias</ion-title>
   </ion-navbar>
 
@@ -14,5 +11,12 @@
 
 
 <ion-content padding>
+    <ion-content>
+        <ion-item-group>
 
+          <ion-item (click)='navProdutos()'>Eletrônicos</ion-item>
+          <ion-item (click)='navProdutos()'>Moveis</ion-item>
+          
+        </ion-item-group>
+      </ion-content>
 </ion-content>
