--- a/src/pages/produto-detalhe/produto-detalhe.html
+++ b/src/pages/produto-detalhe/produto-detalhe.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Produto Detalhe</ion-title>
+    <ion-title id="title">{{produto.nome}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -10,18 +10,19 @@
 
 <ion-content padding>
     <ion-card>
-        <img src="../assets/imgs/bvs.png">
+        <img src="../../assets/imgs/{{produto.image}}">
         <ion-card-content>
           <ion-card-title>
-              Blu-Ray Batman v Superman
+             {{produto.nome}}
             </ion-card-title>
           <p>
             The most popular industrial group ever, and largely
             responsible for bringing the music to a mass audience.
           </p>
+          <p>{{produto.preco | currency:'BRL':true:'1.2-2'}}</p>
           <div style="text-align: center">
           <button ion-button color="danger">Comprar</button>
-          <button ion-button color="danger">Add Cart</button>
+          <button ion-button color="danger" clear>Add Cart</button>
           </div>
         </ion-card-content>
       </ion-card>
